# flap

./: Cargo.toml  DECISIONS.md  LICENSE  README.md  STATE.md  todo.txt
.github/workflows/: ci-full.yml  ci-minimal.yml
crates/flap-emit-dart/: Cargo.toml
crates/flap-emit-dart/src/: lib.rs
crates/flap-ir/: Cargo.toml
crates/flap-ir/src/: lib.rs
crates/flap-spec/: Cargo.toml
crates/flap-spec/src/: lib.rs  swagger.rs
examples/: gen_dart.rs
out_meteo/: api_error.dart  forecast_response.dart  get_forecast_temperature_unit.dart  get_forecast_wind_speed_unit.dart  open_meteo_client.dart
src/: main.rs
tests/fixtures/: oauth2_petstore.yaml  open_meteo.yaml  patch_test.yaml  petstore_31.yaml  secure_petstore.yaml  skywatch_weather.yaml
